# raftcpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
src/: meson.build
src/raft/: CMakeLists.txt  Committer.cpp  Committer.h  Entry.h  Error.cpp  Error.h  Ids.h  Log.cpp  Log.h  Node.cpp  Node.h  Raft.cpp  Raft.h  Storage.cpp  Storage.h  Timer.cpp  Timer.h  Types.cpp  Types.h
subprojects/: bmcl.wrap
tests/: CMakeLists.txt  meson.build  mock_send_functions.cpp  mock_send_functions.h  test_log.cpp  test_node.cpp  test_scenario.cpp  test_server.cpp
